tests/init_state/cfg_shape/loop_may_reach_uninit.err.expected
error: at 9:5: [INIT-UseInconsistent] In function 'f', block 'body': variable 'x' may be used before initialization or after move (state inconsistent across paths)
   |
 9 |     y = copy x;
   |     ^^^^^^^^^^
